# go-ipopt

./: .gitignore  CMakeLists.txt  README.md  go.mod  ipopt.go  ipopt.out  ipopt_c_api.h  ipopt_cfunc.go  ipopt_test.go
src/: CMakeLists.txt  ipopt_c_api.c  ipopt_c_api.h  test_ipopt_.c
