
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB cipopt_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c )
FILE( GLOB cipopt_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(cipopt STATIC
            ${cipopt_HEADER_FILES}
            ${cipopt_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(cipopt PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${cipopt_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${cipopt_HEADER_FILES})

SET_TARGET_PROPERTIES(cipopt
                    PROPERTIES PUBLIC_HEADER "${headers}")
